# backend-task

./: .coverage  .dockerignore  .env.example  Dockerfile  Dockerfile.worker  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  render.yml  requirements.txt  start.sh
.github/workflows/: ci_cd.yml
app/: config.py  database.py  main.py
app/api/: deps.py  rate_limit_deps.py
app/api/v1/: auth.py  cache.py  social.py  stories.py  uploads.py  users.py  websocket.py
app/core/: idempotency.py  logging_config.py  metrics.py  metrics_middleware.py  rate_limiter.py  redis_client.py  security.py  websocket_manager.py
app/models/: schemas.py
app/repositories/: follow_repo.py  story_repo.py  user_repo.py
app/services/: auth_service.py  cache_service.py  storage_service.py  story_service.py
app/worker/: __init__.py  expiration_worker.py
migrations/: 001_create_tables.sql  002_create_indexes.sql
scripts/: seed.py
tests/: conftest.py
tests/integration/: test_auth_api.py  test_stories_api.py
tests/load/: create_view_autocannon.sh  create_view_load.js
tests/unit/: test_auth_service.py  test_story_service.py
