[project]
name = "stories-service"
version = "0.1.0"
description = "Production-ready Stories backend with FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.0.0",
    "bcrypt>=4.2.0",
    "boto3>=1.35.0",
    "botocore>=1.40.44",
    "websockets>=12.0",
    "redis>=5.0.0",
    "prometheus-client>=0.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "faker>=28.0.0",
    "k6>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
